update layer image and number

--- a/v2/index.html
+++ b/v2/index.html
@@ -335,6 +335,17 @@
                                     <div class="swiper-slide"><img src="assets/layers/EYES/EYES4.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/EYES/EYES5.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/EYES/EYES6.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES7.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES8.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES9.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES10.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES11.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES12.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES13.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES14.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES15.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES16.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/EYES/EYES17.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -352,6 +363,7 @@
                                     <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH8.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH9.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH10.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH11.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -378,6 +390,7 @@
                                     <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES17.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES18.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                     <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES19.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
+                                    <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES20.png" class="img-fluid rounded-circle border border-5 border-trans"/></div>
                                 </div>
                             </div>
                         </div>
@@ -400,6 +413,17 @@
                             <div class="swiper-slide"><img src="assets/layers/EYES/EYES4.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/EYES/EYES5.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/EYES/EYES6.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES7.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES8.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES9.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES10.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES11.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES12.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES13.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES14.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES15.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES16.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/EYES/EYES17.png" class="img-fluid"/></div>
                         </div>
                     </div>
                     <div class="swiper-button-prev dress-eyes scale-1x5 scale-md-2x0 scale-xl-2x5 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-black"><</div>
@@ -420,6 +444,7 @@
                             <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH8.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH9.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH10.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/MOUTH/MOUTH11.png" class="img-fluid"/></div>
                         </div>
                     </div>
                     <div class="swiper-button-prev dress-mouth scale-1x5 scale-md-2x0 scale-xl-2x5 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-black"><</div>
@@ -449,6 +474,7 @@
                             <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES17.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES18.png" class="img-fluid"/></div>
                             <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES19.png" class="img-fluid"/></div>
+                            <div class="swiper-slide"><img src="assets/layers/CLOTHES/CLOTHES20.png" class="img-fluid"/></div>
                         </div>
                     </div>
                     <div class="swiper-button-prev dress-clothes scale-1x5 scale-md-2x0 scale-xl-2x5 mv-left-lg-3 mv-left-xl-4 btn shadow-none text-black"><</div>
