--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url='v2/index.html'"/>
+    <meta http-equiv="refresh" content="0; url='v2/dress.html'"/>
     <script type="text/javascript">
         setTimeout(function (){
-            window.location.href = 'v2/index.html';
+            window.location.href = 'v2/dress.html';
         }, 500);
     </script>
     <title>Redirect to Homepage...</title>
