--- a/v2/dress.html
+++ b/v2/dress.html
@@ -398,7 +398,7 @@
 <div class="container-fluid py-5">
     <div class="d-flex justify-content-center my-4">
         <div class="btn btn-lg btn-primary btn-xxl hover-linear-color bg-brand-linear border-white border-3">
-            <a href="#" class="text-white text-decoration-none" target="_blank">活動詳情</a>
+            <a href="https://www.instagram.com/p/Cdx_AnSr1Sw/" class="text-white text-decoration-none" target="_blank">活動詳情</a>
         </div>
     </div>
 </div>
