fix FAQ block padding in small size

--- a/v2/index.html
+++ b/v2/index.html
@@ -769,8 +769,8 @@
     <ul class="row mb-3 list-unstyled">
         <li class="col-12 my-4">
             <div class="card bg-white py-4 mx-4 radius-2">
-                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
-                    <a href="#faq_1" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q1. 什麼是WANA ?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 px-4 ps-sm-5 mb-0">
+                    <a href="#faq_1" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q1. 什麼是WANA？</a>
                 </h3>
                 <div class="collapse" id="faq_1">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
@@ -784,8 +784,8 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white py-4 mx-4 radius-2">
-                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
-                    <a href="#faq_2" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q2. 發佈時間 ?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 px-4 ps-sm-5 mb-0">
+                    <a href="#faq_2" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q2. 發佈時間？</a>
                 </h3>
                 <div class="collapse" id="faq_2">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
@@ -799,8 +799,8 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white py-4 mx-4 radius-2">
-                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
-                    <a href="#faq_3" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q3. MINT價格是多少?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 px-4 ps-sm-5 mb-0">
+                    <a href="#faq_3" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q3. MINT價格是多少？</a>
                 </h3>
                 <div class="collapse" id="faq_3">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
@@ -814,8 +814,8 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white py-4 mx-4 radius-2">
-                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
-                    <a href="#faq_4" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 px-4 ps-sm-5 mb-0">
+                    <a href="#faq_4" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q4. 我可以用我的WANA NFT做什麼？</a>
                 </h3>
                 <div class="collapse" id="faq_4">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
@@ -829,8 +829,8 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white py-4 mx-4 radius-2">
-                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
-                    <a href="#faq_5" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦 ?</a>
+                <h3 class="banner-text-h2 text-start px-md-5 px-4 ps-sm-5 mb-0">
+                    <a href="#faq_5" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q5. 如果NFT售完怎麼辦？</a>
                 </h3>
                 <div class="collapse" id="faq_5">
                     <div class="card-body banner-text-h4 mx-2 mx-sm-3 mx-md-5 pb-0">
@@ -844,7 +844,7 @@
 
         <li class="col-12 my-4">
             <div class="card bg-white py-4 mx-4 radius-2">
-                <h3 class="banner-text-h2 text-start px-md-5 ps-4 ps-sm-5 mb-0">
+                <h3 class="banner-text-h2 text-start px-md-5 px-4 ps-sm-5 mb-0">
                     <a href="#faq_6" class="stretched-link text-black text-decoration-none fw-bold" data-bs-toggle="collapse">Q6. 最後注意安全、我們關心每一位夥伴</a>
                 </h3>
                 <div class="collapse" id="faq_6">
