--- a/v2/index.html
+++ b/v2/index.html
@@ -84,8 +84,8 @@
 
 </div>
 
-<div class="container d-flex justify-content-center position-relative mv-up-9">
-    <div class="col-10 bg-base mint-coming-soon">
+<div class="container d-flex justify-content-center position-relative mv-up-9 g-0">
+    <div class="col-12 col-md-11 col-lg-10 bg-base mint-coming-soon p-5 radius-3">
         <h3 class="text-white h1 fw-bold">0 / Coming Soon...</h3>
         <div class="text-white mb-2 h4 py-3">Mint Coming Soon...</div>
         <div class="progress">
