--- a/v2/index.html
+++ b/v2/index.html
@@ -47,41 +47,49 @@
 </nav>
 <!-- 主圖 -->
 <div class="container-fluid full-layout bg-full position-relative main-image px-0">
-    <nav class="d-none d-xl-block navbar navbar-expand-xl navbar-dark bg-cap-trans px-4">
+    <nav class="d-none d-xl-block navbar navbar-dark bg-cap-trans px-4">
         <div class="align-items-center w-100 bg-transparent">
             <div class="row">
-                <div class="col-3">
+                <div class="col flex-grow-0 col-xxl-3">
                     <div class="d-flex flex-row">
                         <a href="#" class="navbar-brand">
                             <img src="assets/logo/WANA_LOGO_banner.png" height="34" alt="WANA-Logo"/>
                         </a>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col flex-grow-1 col-xxl-9">
                     <div class="d-flex flex-row">
-                        <div class="d-flex flex-row align-items-center user-select-none">
-                            <a class="nav-link text-white" href="#about">About</a>
-                            <a class="nav-link text-white" href="#roadmap">Roadmap</a>
-                            <a class="nav-link text-white" href="#faq">FAQ</a>
-                            <a class="nav-link text-white-50 disabled" href="#">Team</a>
-                            <a class="nav-link text-white-50 disabled" href="#">Collection</a>
-                            <a class="nav-link text-white-50 disabled" href="#">Mint</a>
-                            <a class="nav-link text-white-50 disabled" href="#">MyWANA</a>
+                        <div class="col">
+                            <div class="d-flex flex-row align-items-center user-select-none">
+                                <a class="nav-link text-white" href="#about">About</a>
+                                <a class="nav-link text-white" href="#roadmap">Roadmap</a>
+                                <a class="nav-link text-white" href="#faq">FAQ</a>
+                                <a class="nav-link text-white-50 disabled" href="#">Team</a>
+                                <a class="nav-link text-white-50 disabled" href="#">Collection</a>
+                                <a class="nav-link text-white-50 disabled" href="#">Mint</a>
+                                <a class="nav-link text-white-50 disabled" href="#">MyWANA</a>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="d-flex flex-row justify-content-end">
-                        <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/instagram.svg" height="26" alt="instagram"/></a>
-                        <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/discord.svg" height="26" alt="discord"/></a>
-                        <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/twitter.svg" height="26" alt="twitter"/></a>
-                        <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/facebook.svg" height="26" alt="facebook"/></a>
+
+                        <div class="col">
+                            <div class="d-flex flex-row justify-content-end align-items-center">
+                                <a class="nav-link text-white" href="https://www.instagram.com/wananft/" target="_blank"><img src="assets/icon/instagram.svg" height="26" alt="instagram"/></a>
+                                <a class="nav-link text-white" href="https://discord.com/invite/PJv2U32JNJ" target="_blank"><img src="assets/icon/discord.svg" height="26" alt="discord"/></a>
+                                <a class="nav-link text-white" href="https://twitter.com/wananft" target="_blank"><img src="assets/icon/twitter.svg" height="26" alt="twitter"/></a>
+                                <a class="nav-link text-white" href="https://www.facebook.com/wananft" target="_blank"><img src="assets/icon/facebook.svg" height="26" alt="facebook"/></a>
+                                <div class="bg-brand radius-1 px-3"><a class="nav-link text-white" href="javascript:alert('敬請期待！');">Connect</a></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </nav>
-
+    <div class="d-block d-xl-none main-btn d-flex justify-content-center">
+        <div class="btn btn-primary btn-xxl bg-brand border-0">
+            <a href="javascript:alert('敬請期待！');" class="text-white text-decoration-none">Connect</a>
+        </div>
+    </div>
 </div>
 
 <div class="container d-flex justify-content-center position-relative mv-up-9 g-0">
@@ -874,10 +882,10 @@
                         <a class="nav-link text-white" href="#about">About</a>
                         <a class="nav-link text-white" href="#roadmap">Roadmap</a>
                         <a class="nav-link text-white" href="#faq">FAQ</a>
-                        <a class="nav-link disabled" href="#">Team</a>
-                        <a class="nav-link disabled" href="#">Collection</a>
-                        <a class="nav-link disabled" href="#">Mint</a>
-                        <a class="nav-link disabled" href="#">MyWANA</a>
+                        <a class="nav-link text-white-50 disabled" href="#">Team</a>
+                        <a class="nav-link text-white-50 disabled" href="#">Collection</a>
+                        <a class="nav-link text-white-50 disabled" href="#">Mint</a>
+                        <a class="nav-link text-white-50 disabled" href="#">MyWANA</a>
                     </div>
                 </div>
             </div>
@@ -904,10 +912,10 @@
                     <li><a class="nav-link text-white" href="#about">About</a></li>
                     <li><a class="nav-link text-white" href="#roadmap">Roadmap</a></li>
                     <li><a class="nav-link text-white" href="#faq">FAQ</a></li>
-                    <li><a class="nav-link disabled" href="#">Team</a></li>
-                    <li><a class="nav-link disabled" href="#">Collection</a></li>
-                    <li><a class="nav-link disabled" href="#">Mint</a></li>
-                    <li><a class="nav-link disabled" href="#">MyWANA</a></li>
+                    <li><a class="nav-link text-white-50 disabled" href="#">Team</a></li>
+                    <li><a class="nav-link text-white-50 disabled" href="#">Collection</a></li>
+                    <li><a class="nav-link text-white-50 disabled" href="#">Mint</a></li>
+                    <li><a class="nav-link text-white-50 disabled" href="#">MyWANA</a></li>
                 </ul>
             </div>
         </div>
