--- a/v2/index.html
+++ b/v2/index.html
@@ -715,6 +715,12 @@
             <div class="py-2"><a href="https://github.com/linty1997" target="_blank"><img src="assets/icon/github.svg" height="32"></a></div>
             <div class="banner-text-h4">小白</div>
         </div>
+        <div class="col text-center text-white py-3">
+            <div class="banner-text-h4 py-3">財務顧問</div>
+            <img src="assets/image/TEAM/MEMBER11.png" class=" rounded-circle" height="165">
+            <div class="py-2"><a href="#" target="_blank"><img height="32"></a></div>
+            <div class="banner-text-h4">Liyu</div>
+        </div>
     </div>
 </div>
 
